# ai-agent-learning

./: .env  .gitignore  1_simple_graph.ipynb  3_chatbot.ipynb  4_tool_calll-Copy1.ipynb  4_tool_calll.ipynb  app.py  chatbot.py  chatbot_graph.py  json.txt  leave_balance.py  login_json_TB1001.txt  main.py  pyproject.toml  sample.py  state.py  stock.py
.ipynb_checkpoints/: 4_tool_calll-Copy1-checkpoint.ipynb  4_tool_calll-checkpoint.ipynb  5_tool_calll_agent-checkpoint.ipynb
agents/: __init__.py  leave_balance.py  leave_balance_agent.py  shared.py  stock_agent.py  stock_price_Agent.py
jupyter file/: 2_graph_with_condition.ipynb  4_tool_calll.ipynb  5_tool_calll_agent.ipynb  6_memory_saver_agent.ipynb  7_human_in_the_loop.ipynb
jupyter file/.ipynb_checkpoints/: 5_tool_calll_agent-checkpoint.ipynb
jupyter file/leave/: leave_apply.ipynb  leave_balance.ipynb
jupyter file/leave/.ipynb_checkpoints/: leave_apply-checkpoint.ipynb  leave_balance-checkpoint.ipynb
leave/: leave_balance.ipynb
